--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - VITE_API_URL=${SERVER_URL}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.DisplayHub-admin.rule=Host(`${CLIENT_URL}`)"
-      - "traefik.http.routers.DisplayHub-admin.entrypoints=websecure"
-      - "traefik.http.routers.DisplayHub-admin.tls.certresolver=myresolver"
+      - "traefik.http.routers.MailGenerator-client.rule=Host(`${CLIENT_URL}`)"
+      - "traefik.http.routers.MailGenerator-client.entrypoints=websecure"
+      - "traefik.http.routers.MailGenerator-client.tls.certresolver=myresolver"
     depends_on:
       - server
 
@@ -29,7 +29,7 @@ services:
       - CLIENT_URL=${VITE_CLIENT_URL}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.DisplayHub-server.rule=Host(`${SERVER_URL}`)"
-      - "traefik.http.services.DisplayHub-server.loadbalancer.server.port=${SERVER_PORT}"
-      - "traefik.http.routers.DisplayHub-server.entrypoints=websecure"
-      - "traefik.http.routers.DisplayHub-server.tls.certresolver=myresolver"
+      - "traefik.http.routers.MailGenerator-server.rule=Host(`${SERVER_URL}`)"
+      - "traefik.http.services.MailGenerator-server.loadbalancer.server.port=${SERVER_PORT}"
+      - "traefik.http.routers.MailGenerator-server.entrypoints=websecure"
+      - "traefik.http.routers.MailGenerator-server.tls.certresolver=myresolver"
