--- a/docker-compose.override.yml.template
+++ b/docker-compose.override.yml.template
@@ -1,7 +1,13 @@
 services:
   MailGenerator-client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     ports:
       - "${CLIENT_PORT}:${CLIENT_PORT}"
+    volumes:
+      - ./client:/app
+      - /app/node_modules
 
   MailGenerator-server:
     ports:
