--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - ./server:/app
       - /app/node_modules
     environment:
-      - CLIENT_URL=${VITE_CLIENT_URL}
+      - CLIENT_URL=${CLIENT_URL}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.MailGenerator-server.rule=Host(`${SERVER_URL}`)"
