--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 SERVER_URL=http://localhost:3001
+SERVER_DOMAIN=localhost
 SERVER_PORT=3001
 
 CLIENT_URL=http://localhost:5173
+CLIENT_DOMAIN=localhost
 CLIENT_PORT=5173
