--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     volumes:
       - ./server:/app
       - /app/node_modules
+    ports:
+      - "${SERVER_PORT}:${SERVER_PORT}"
     environment:
       - CLIENT_URL=${CLIENT_URL}
     labels:
