--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -8,6 +8,10 @@ RUN npm install --production
 
 COPY . .
 
+ARG CLIENT_URL SERVER_PORT
+ENV CLIENT_URL=$CLIENT_URL
+ENV SERVER_PORT=$SERVER_PORT
+
 ENV NODE_ENV=production
 
 CMD ["node", "index.js"]
