--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -8,7 +8,8 @@ RUN npm install --production
 
 COPY . .
 
-ARG CLIENT_URL SERVER_PORT
+ARG CLIENT_URL
+ARG SERVER_PORT
 ENV CLIENT_URL=$CLIENT_URL
 ENV SERVER_PORT=$SERVER_PORT
 
