--- a/server/data/additionalContents.json.template
+++ b/server/data/additionalContents.json.template
@@ -5,6 +5,7 @@
     "filename": "eazfez543fezr3423fZER.png",
     "originalname": "banniere-mail-me2m.png",
     "url": "uploads/eazfez543fezr3423fZER.png",
-    "isDefault": true
+    "isDefault": true,
+    "model": "edissyum"
   }
 ]
